# aapy_libs

./: README.md  pyproject.toml  requirements.txt
aapy_libs/: __init__.py  module.py
scripts/: generate_requirements.py
