[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aapy_libs"
version = "0.1.0"
description = "A collection of utility functions for Python projects"
readme = "README.md"
authors = ["Pablo <pablo@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/aapy_libs"
packages = [{include = "aapy_libs"}]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

# UV configuration
[tool.uv]
python = "3.7"
